--- a/styles/layout.css
+++ b/styles/layout.css
@@ -41,6 +41,13 @@
 	transition: background-color .3s;
 	background-color: green;
 }
+.layout__donate-button-pp {
+	opacity: .5;
+}
+
+.layout__donate-button-pp:hover {
+	opacity: 1;
+}
 
 .layout__donate-copy {
 	font-weight: 900;
