--- a/styles/brand.css
+++ b/styles/brand.css
@@ -6,7 +6,55 @@
 }
 
 
-h5 {
-	margin-top: -20px;
-	/*font-variant: small-caps;*/
+h1 {
+	font-size: 5rem;
 }
+
+h2 {
+	font-size: 4rem;
+}
+
+h3 {
+	font-size: 4rem;
+	letter-spacing: .2rem;
+	font-weight: 300;
+	/*text-align: center;*/
+}
+
+h5 {
+	font-size: 3rem;
+	margin-top: -2.5rem;
+}
+
+p {
+	font-size: 3.5rem;
+	line-height: 4.5rem;
+}
+
+@media (min-width: 1080px) {
+	h1 {
+		font-size: 3rem;
+	}
+
+	h2 {
+		font-size: 2.2rem;
+	}
+
+	h3 {
+		font-size: 2rem;
+		font-weight: 100;
+		letter-spacing: .1rem;
+	}
+
+	h5 {
+		font-size: 1.5rem;
+		margin-top: -30px;
+	}
+
+	p {
+		font-size: 1.2rem;
+		line-height: 1.5rem;
+	}
+}
+
+
