--- a/styles/image.css
+++ b/styles/image.css
@@ -9,4 +9,11 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 750px;
+	font-weight: 300;
+}
+
+@media(min-width: 1080px) {
+	.image__header {
+		font-weight: 100;
+	}
 }
