--- a/styles/layout.css
+++ b/styles/layout.css
@@ -12,23 +12,43 @@
 }
 
 .layout__video-box {
-	/*display: inline-block;*/
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 0 35px;
+	flex-grow: 10;
+}
+
+@media (min-width: 750px) {
+	.layout__video-box {
+		flex-grow: 6;
+	}
 }
 
 .layout__campaign-video {
-	margin: 2rem;
-	/*height: 50rem;*/
-	/*width: 40rem;*/
-	/*overflow: hidden;*/
+	border-top-right-radius: 7px;
+	border-top-left-radius: 7px;
+	border-bottom-right-radius: 9px;
+	border-bottom-left-radius: 9px;
+	overflow: hidden;
+}
 
-	border-radius: 7px;
-	/*background-color: lightgrey;*/
+.layout__video-button__box {
+	display: flex;
+	justify-content: center;
+	padding: 1rem 0;
+	margin: 5rem;
+}
+
+@media (min-width: 1080px) {
+	.layout__video-button__box {
+		margin: 2rem;
+	}
 }
 
 .layout__donate-button {
-	margin: 2rem;
 	padding: .1rem 0;
-	height: 5rem;
+	/*height: 5rem;*/
 	width: 360px;
 
 	border-radius: 7px;
@@ -56,16 +76,31 @@
 }
 
 .layout__campaign-stats {
-	/*float: right;*/
-	/*display: inline-block;*/
-	margin: 4rem;
-	padding: 32px;
-	height: 60vh;
-	min-width: 16rem;
+	margin: 0 2rem;
+	/*padding: 32px;*/
+	flex-grow: 4;
+	/*max-width: 20vw;*/
 
 	border-radius: 7px;
 	border: 3px solid lightgrey;
 }
+
+@media(min-width: 1080px) {
+	.layout__campaign-stats {
+		margin: 0 4rem;
+		/*padding: 32px;*/
+		flex-grow: 4;
+		max-width: 20vw;
+
+		border-radius: 7px;
+		border: 3px solid lightgrey;
+	}
+}
+
+.layout__second-box {
+	margin-top: 5rem;
+}
+
 
 .layout__small-space {
 	margin: 4rem 0;
@@ -73,7 +108,21 @@
 }
 
 
+.layout__footer__logo {
+	display: block;
+	margin-top: 100px;
+	margin-bottom: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	height: 200px;
+}
 
+@media(min-width: 1080px) {
+	.layout__footer__logo {
+		margin-top: 300px;
+		height: 60px;
+	}
+}
 
 
 
