--- a/styles/brand.css
+++ b/styles/brand.css
@@ -31,6 +31,11 @@ p {
 	line-height: 4.5rem;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
 @media (min-width: 1080px) {
 	h1 {
 		font-size: 3rem;
