--- a/styles/brand.css
+++ b/styles/brand.css
@@ -24,16 +24,27 @@ h3 {
 h5 {
 	font-size: 3rem;
 	margin-top: -2.5rem;
+	font-weight: 300;
 }
 
 p {
 	font-size: 3.5rem;
 	line-height: 4.5rem;
+	text-align: left;
+	max-width: 750px;
 }
 
 a {
 	text-decoration: none;
 	color: inherit;
+}
+
+p a {
+	color: #7b8403;
+}
+
+p a:hover {
+	color: #adc405;
 }
 
 @media (min-width: 1080px) {
