just a few pokes but I'm switching gears to getting marketing fleshed out on Mail Chimp and Cardigan

--- a/styles/posts.css
+++ b/styles/posts.css
@@ -16,6 +16,9 @@
 
 	border-radius: 7px;
 	border: 3px solid lightslategrey;
+	background-color: white;
+
+	transition: height .3s;
 }
 
 .post__top-line {
