--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,18 +1,102 @@
 
 
+.nav__mobile {
+	display: flex;
+	justify-content: space-between;
 
-.nav {
 	position: fixed;
-	z-index: 9;
 	top: 0;
+	z-index: 9;
+	height: 100px;
+	width: 100%;
 	left: 0;
-	width: 100vw;
-	height: 50px;
-	padding-top: 10px;
 
 	background-color: darkslategrey;
-	color: white;
-	font-weight: 300;
+}
+
+.nav__desktop {
+	display: none;
+}
+
+.nav__home__mobile {
+	margin: 20px;
+	height: 60px;
+}
+
+.nav__mobile__elipsis {
+	display: flex;
+	flex-direction: row;
+	margin: 30px 60px 0 0;
+	padding: 5px;
+	height: 10px;
+	width: 10%;
+	/*border: 1px solid red;*/
+}
+
+.elipsis-dot {
+	margin: 5px;
+	height: 14px;
+	width: 14px;
+	border-radius: 7px;
+	background-color: white;
+}
+
+.nav__mobile__dropdown {
+	display: flex;
+	flex-direction: column;
+	position: fixed;
+	top: 0;
+	right: 0;
+	z-index: 8;
+	padding: 120px 100px 25px 45px;
+
+	background-color: white;
+	border-bottom-left-radius: 35px;
+	border: 10px solid darkslategrey;
+}
+
+.nav__mobile__link {
+	display: block;
+	font-size: 4rem;
+	margin: 3rem 0;
+}
+
+.nav__mobile__backdrop {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+
+	background-color: black;
+	opacity: .7;
+}
+
+.nav__hidden {
+	display: none;
+}
+
+@media (min-width: 980px) {
+	.nav__mobile { display: none; }
+
+	.nav__mobile__dropdown {display: none}
+
+	.nav__desktop {
+		display: block;
+		position: fixed;
+		z-index: 9;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 50px;
+		padding-top: 10px;
+
+		background-color: darkslategrey;
+		color: white;
+		font-weight: 300;
+	}
 }
 
 .nav__home {
