--- a/styles/brand.css
+++ b/styles/brand.css
@@ -5,31 +5,36 @@
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
 
+h1,h2,h3,h4,h5,h6,p,span {
+	max-width: 90%;
+}
+
 
 h1 {
-	font-size: 5rem;
+	font-size: 3rem;
 }
 
 h2 {
-	font-size: 4rem;
+	font-size: 2.5rem;
 }
 
 h3 {
-	font-size: 4rem;
+	font-size: 2rem;
 	letter-spacing: .2rem;
 	font-weight: 300;
 	/*text-align: center;*/
 }
 
 h5 {
-	font-size: 3rem;
-	margin-top: -2.5rem;
+	max-width: 700px;
+	font-size: 1.75rem;
+	margin-top: -1.5rem;
 	font-weight: 300;
 }
 
-p {
-	font-size: 3.5rem;
-	line-height: 4.5rem;
+p,li {
+	font-size: 1.3rem;
+	line-height: 1.7rem;
 	text-align: left;
 	max-width: 750px;
 }
@@ -75,8 +80,8 @@ h3 a:hover {
 		margin-top: -30px;
 	}
 
-	p {
-		font-size: 1.2rem;
+	p,li {
+		font-size: 1.125rem;
 		line-height: 1.5rem;
 	}
 }
