--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,18 +1,29 @@
 
 
+@media (min-width: 700px) {}
+
+@media (min-width: 1080px) {}
+
 
 .layout__header {
 	display: flex;
-	flex-direction: row;
+	/*flex-direction: column;*/
 	justify-content: space-between;
 
-	margin: 0 4rem 0 4rem;
 	margin-top: 100px;
+	/*border: 1px solid green;*/
+}
+
+@media (min-width: 700px) {}
+
+@media (min-width: 1080px) {
+	.layout__header {
+		margin: 100px 4rem 0 4rem;
+	}
 }
 
 .layout__header__title-box {
-	max-width: 60%;
-
+	margin-left: .5rem;
 	/*border: 1px solid red;*/
 }
 
@@ -21,40 +32,57 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 
-	/*border: 1px solid red;*/
+	/*border: 1px solid purple;*/
 
 }
 
 .layout__video-box {
 	display: flex;
 	flex-direction: column;
-	align-items: left;
-	padding: 0 0 0 4rem;
-	flex-grow: 10;
+	align-items: center;
+	/*flex-grow: 10;*/
+	max-width: 100%
 
-	/*border: 1px solid red;*/
+	/*border: 10px solid green;*/
 
 }
 
-@media (min-width: 750px) {
+@media (min-width: 1080px) {
 	.layout__video-box {
-		flex-grow: 6;
+		display: flex;
+		flex-direction: column;
+		align-items: left;
+		padding: 0 0 0 4rem;
+		flex-grow: 10;
+		max-width: 100%
+
+		/*border: 1px solid red;*/
+
 	}
 }
 
 .layout__campaign-video {
-	/*border-top-right-radius: 7px;*/
-	/*border-top-left-radius: 7px;*/
-	/*border-bottom-right-radius: 9px;*/
-	/*border-bottom-left-radius: 9px;*/
-	overflow: hidden;
+	display: flex;
+	justify-content: center;
+}
+
+.layout__campaign-video-box {
+		display: flex;
+		justify-content: center;
+	}
+
+@media (min-width: 1080px) {
+	.layout__campaign-video-box {
+		display: flex;
+		justify-content: left;
+	}
 }
 
 .layout__video-button__box {
 	display: flex;
 	justify-content: left;
 	padding: 0;
-	margin: 0;
+	margin: 0.5rem 0;
 }
 
 @media (min-width: 1080px) {
@@ -66,7 +94,7 @@
 .layout__donate-button {
 	padding: .1rem 0;
 	/*height: 5rem;*/
-	width: 360px;
+	/*width: 100%;*/
 
 	border-radius: 7px;
 	transition: background-color .3s;
@@ -118,6 +146,9 @@
 	margin-top: 5rem;
 }
 
+.layout__img-fit {
+	max-width: 100%;
+}
 
 .layout__small-space {
 	margin: 4rem 0;
