--- a/styles/mailchimp.css
+++ b/styles/mailchimp.css
@@ -3,11 +3,12 @@
 
 
 .mailchimp-box {
-	margin: 5rem 0 0 0;
+	margin: 1rem;
 	padding: 15px;
 	height: 40px;
 	cursor: pointer;
 
+	text-align: center;
 	border-radius: 7px;
 	background-color: #7b8403;
 }
