--- a/styles/posts.css
+++ b/styles/posts.css
@@ -4,21 +4,38 @@
 .posts {
 	width: 100vw;
 	min-height: 100px;
-	padding: 30px 80px;
+	padding: 30px 0px;
 
 	background-color: ghostwhite;
 }
 
+@media (min-width: 700px) {}
+
+@media (min-width: 1080px) {
+	.posts {
+		padding: 30px 80px;
+	}
+}
+
 .post {
-	margin: 15px 0;
-	max-width: 800px;
-	padding: 20px;
+	margin: 15px 3px;
+	max-width: 90%;
+	padding: 10px;
 
 	border-radius: 7px;
 	border: 3px solid lightslategrey;
 	background-color: white;
 
 	transition: height .3s;
+}
+
+@media (min-width: 700px) {}
+
+@media (min-width: 1080px) {
+	.post {
+		padding: 20px;
+		max-width: 800px;
+	}
 }
 
 .post__top-line {
